--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,18 +17,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Build image
-      runs: docker build -t mdr .
+      run: docker build -t mdr .
     - name: Login to the GitHub container registry
-      runs: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Extract metadata
       id: image-metadata
-      runs: |
+      run: |
         echo "name=ghcr.io/${GITHUB_REPOSITORY}" >> $GITHUB_OUTPUT
         echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
     - name: Push image
       env:
         IMAGE_NAME: ${{ steps.image-metadata.outputs.name }}
         IMAGE_TAG: ${{ steps.image-metadata.outputs.tag }}
-      runs: |
+      run: |
         docker tag mdr ${IMAGE_NAME}:${IMAGE_TAG}
         docker push ${IMAGE_NAME}:${IMAGE_TAG}
